@@ -1,16 +1,16 @@
 import java.io.IOException;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 public class SendingQueue extends Thread {
-	public LinkedList<AudioChunk> sendingQueue;
+	public ArrayList<AudioChunk> sendingQueue;
 	Broadcaster b = new Broadcaster();
 	public SendingQueue() {
-		this.sendingQueue = new LinkedList<AudioChunk>();
+		this.sendingQueue = new ArrayList<AudioChunk>();
 	}
 	
 	
 	public synchronized void add(AudioChunk sendingChunk) {
-		this.sendingQueue.add(sendingChunk);
+		sendingQueue.add(sendingChunk);
 		notifyAll();
 	}
 	
@@ -19,12 +19,13 @@ public class SendingQueue extends Thread {
 	 * and shall not be called from the outside
 	 */
 	private void send(AudioChunk sendingChunk) throws InterruptedException, IOException {
-		System.out.print("this has been called");
+		System.out.print("calling broadcaster to send a chuk");
 		b.broadcast(sendingChunk);
 	}
 	
 	public synchronized void run () {
 		while (true) {
+			System.out.println("Sending Queue Thread:" + Thread.currentThread().getName());
 //			check whether there is anything to send ? if not go sleep
 //			it will be woken up by add();
 			if (sendingQueue.isEmpty()) {
@@ -36,7 +37,8 @@ public class SendingQueue extends Thread {
 				}
 			}
 			
-			AudioChunk goingToSend = sendingQueue.removeFirst();
+			AudioChunk goingToSend = sendingQueue.get(0);
+			sendingQueue.remove(0);
 			try {
 				this.send(goingToSend);
 			} catch (InterruptedException e) {
